--- a/ParkShark/Base.lproj/Main.storyboard
+++ b/ParkShark/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="U37-Tj-a3c">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="U37-Tj-a3c">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6246"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Root View Controller-->
@@ -32,28 +33,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bWT-eM-EnY" customClass="GMSMapView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xgt-ir-6hL" customClass="GMSMapView">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9R0-o6-3Iy" customClass="GMSMapView">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
-                                        <color key="backgroundColor" red="0.69235214840000003" green="0.87099376949999996" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                    </view>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="9R0-o6-3Iy" secondAttribute="bottom" id="P3n-13-fsc"/>
-                                    <constraint firstAttribute="trailing" secondItem="9R0-o6-3Iy" secondAttribute="trailing" id="bfc-Ze-wS2"/>
-                                    <constraint firstItem="9R0-o6-3Iy" firstAttribute="top" secondItem="bWT-eM-EnY" secondAttribute="top" id="oVo-iX-37d"/>
-                                    <constraint firstItem="9R0-o6-3Iy" firstAttribute="leading" secondItem="bWT-eM-EnY" secondAttribute="leading" id="rEE-h0-19r"/>
-                                </constraints>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Peg-bg-D6Y">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="bWT-eM-EnY" firstAttribute="bottom" secondItem="2fi-mo-0CV" secondAttribute="top" id="0Xc-h9-BnR"/>
-                            <constraint firstItem="bWT-eM-EnY" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="JsR-LE-Yr3"/>
-                            <constraint firstAttribute="trailing" secondItem="bWT-eM-EnY" secondAttribute="trailing" id="ZdY-vA-RcC"/>
-                            <constraint firstItem="bWT-eM-EnY" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="p3E-Mt-gH4"/>
+                            <constraint firstItem="Xgt-ir-6hL" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="FOe-Jb-Fea"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Peg-bg-D6Y" secondAttribute="bottom" id="Gkk-6N-7xc"/>
+                            <constraint firstItem="Xgt-ir-6hL" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="Xmd-ES-5wW"/>
+                            <constraint firstAttribute="trailing" secondItem="Peg-bg-D6Y" secondAttribute="trailing" id="Zau-CL-0tZ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Xgt-ir-6hL" secondAttribute="trailing" constant="-16" id="ce1-TZ-ktE"/>
+                            <constraint firstItem="Peg-bg-D6Y" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="gCD-8o-W6k"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Xgt-ir-6hL" secondAttribute="bottom" id="zoB-jz-HJw"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Navigate" id="27X-78-1v7"/>
@@ -65,7 +63,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="mapView" destination="bWT-eM-EnY" id="ly7-IY-nfj"/>
+                        <outlet property="addressLabel" destination="Peg-bg-D6Y" id="GBr-Lh-8NW"/>
+                        <outlet property="mapView" destination="Xgt-ir-6hL" id="ZqZ-qg-zxW"/>
+                        <outlet property="pinImageVerticalConstraint" destination="FOe-Jb-Fea" id="2ss-h5-pwo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
