--- a/ParkShark/Base.lproj/Main.storyboard
+++ b/ParkShark/Base.lproj/Main.storyboard
@@ -108,48 +108,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lot Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F6p-Jf-ZkO">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Lot Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F6p-Jf-ZkO">
                                 <rect key="frame" x="211" y="28" width="179" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="179" id="YOO-Gr-bcx"/>
-                                    <constraint firstAttribute="height" constant="21" id="cRb-FJ-rQH"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number of total Spaces" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zOA-cD-Fxv">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Number of total Spaces" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zOA-cD-Fxv">
                                 <rect key="frame" x="182" y="57" width="236" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="236" id="nxH-9z-ZYv"/>
-                                    <constraint firstAttribute="height" constant="21" id="s1H-Ka-0Ow"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="permits accepted" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FJJ-Lv-nvM">
-                                <rect key="frame" x="98" y="109" width="404" height="373"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="permits accepted" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FJJ-Lv-nvM">
+                                <rect key="frame" x="16" y="127" width="568" height="373"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number of available spaces" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1KC-RL-lu4">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Number of available spaces" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1KC-RL-lu4">
                                 <rect key="frame" x="148" y="86" width="305" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="Hh1-by-5jm"/>
-                                    <constraint firstAttribute="width" constant="305" id="d60-IF-wdu"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3sJ-5q-VbX">
-                                <rect key="frame" x="175" y="490" width="250" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="cel-15-Por"/>
-                                    <constraint firstAttribute="width" constant="250" id="jLc-m3-W7N"/>
-                                </constraints>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3sJ-5q-VbX">
+                                <rect key="frame" x="175" y="508" width="250" height="30"/>
                                 <state key="normal" title="Start Navigation in Apple Maps">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -159,20 +143,6 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="1KC-RL-lu4" firstAttribute="top" secondItem="zOA-cD-Fxv" secondAttribute="bottom" constant="8" symbolic="YES" id="22G-hN-gzl"/>
-                            <constraint firstItem="zOA-cD-Fxv" firstAttribute="centerX" secondItem="gVq-EH-FMd" secondAttribute="centerX" id="4FL-S9-uhG"/>
-                            <constraint firstItem="zOA-cD-Fxv" firstAttribute="centerX" secondItem="1KC-RL-lu4" secondAttribute="centerX" id="DGa-wP-2Tj"/>
-                            <constraint firstItem="FJJ-Lv-nvM" firstAttribute="centerX" secondItem="1KC-RL-lu4" secondAttribute="centerX" id="Ef2-dq-rVG"/>
-                            <constraint firstItem="F6p-Jf-ZkO" firstAttribute="centerX" secondItem="zOA-cD-Fxv" secondAttribute="centerX" id="QIT-oh-GId"/>
-                            <constraint firstItem="FJJ-Lv-nvM" firstAttribute="centerX" secondItem="3sJ-5q-VbX" secondAttribute="centerX" id="YIY-q1-fxe"/>
-                            <constraint firstItem="FJJ-Lv-nvM" firstAttribute="leading" secondItem="gVq-EH-FMd" secondAttribute="leadingMargin" constant="82" id="a14-Hn-an9"/>
-                            <constraint firstItem="FJJ-Lv-nvM" firstAttribute="top" secondItem="1KC-RL-lu4" secondAttribute="bottom" constant="2" id="fMT-ei-ghu"/>
-                            <constraint firstItem="3sJ-5q-VbX" firstAttribute="top" secondItem="FJJ-Lv-nvM" secondAttribute="bottom" constant="8" symbolic="YES" id="r0X-oN-buL"/>
-                            <constraint firstItem="E0P-14-OHQ" firstAttribute="top" secondItem="3sJ-5q-VbX" secondAttribute="bottom" constant="80" id="tR6-Ip-Kuq"/>
-                            <constraint firstItem="zOA-cD-Fxv" firstAttribute="top" secondItem="F6p-Jf-ZkO" secondAttribute="bottom" constant="8" symbolic="YES" id="uF4-hb-T0Z"/>
-                            <constraint firstItem="F6p-Jf-ZkO" firstAttribute="top" secondItem="hLs-6L-vv9" secondAttribute="bottom" constant="8" symbolic="YES" id="yuq-AA-TZe"/>
-                        </constraints>
                     </view>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                     <connections>
